# nix-config

./: .gitignore  README.md  setup.sh
nixos/: configuration.nix
nixos/meta/: hardware-configuration.home-new.nix  hardware-configuration.home.nix  hardware-configuration.work.nix  home-new.nix  home.nix  work.nix
nixos/modules/: virtualbox.nix  zen-kernel.nix
nixpkgs/: config.nix  home.nix
nixpkgs/lib/: direnvrc  tmux.conf  xinitrc
nixpkgs/lib/dunst/: dunstrc
nixpkgs/lib/qtile/: config.py
nixpkgs/lib/xmonad/: xmonad.hs
nixpkgs/modules/: dropbox.nix  programs.nix  x11.nix
nixpkgs/modules/dwm/: config.h  default.nix
nixpkgs/modules/qtile/: default.nix
nixpkgs/modules/qtile/config/: config.py
nixpkgs/modules/vim/: default.nix  init.vim
nixpkgs/modules/vim/lib/: lsp.vim  nix.vim  python.vim
nixpkgs/modules/wflow/: node-packages.nix
nixpkgs/modules/xmonad/: default.nix  result  rogryza-xmonad.cabal  shell.nix
nixpkgs/overlays/: dwm.nix  npm.nix  poetry.nix  rust.nix  st.nix  vimPlugins.nix
nixpkgs/overlays/qtile/: default.nix  qtile.patch
