name:                rogryza-xmonad
version:             0.1.0.0
synopsis:            Personal xmonad configuration.
homepage:            https://github.com/RoGryza/nix-config/tree/master/config/xmonad/
license:             MIT
author:              Rodrigo Gryzinski
maintainer:          rogryza@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable rogryza-xmonad
  main-is:             xmonad.hs
  build-depends:       base >=4.7
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
  hs-source-dirs:      .
  default-language:    Haskell2010